[package]
name = "faraday_compose_yml"
version = "0.0.62"
authors = ["Eric Kidd <git@randomhacks.net>", "Seamus Abshere <seamus@abshere.net>"]
edition = "2021"
publish = false

description = "Parse, manipulate and serialize docker-compose.yml in a strongly-typed fashion"
documentation = "http://docs.rs/compose_yml"
license = "CC0-1.0 AND Apache-2.0"
readme = "README.md"
repository = "https://github.com/faradayio/compose_yml"

[dev-dependencies]
anyhow = "1.0"

[dependencies]
clippy = { version = "0.*", optional = true }
lazy_static = "1.5"
log = "0.4"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
yaml-rust2 = "0.10"
url = "2.5"
valico = "4.0"
void = "1.0"
